--- a/src/styles.less
+++ b/src/styles.less
@@ -74,3 +74,18 @@ button, input {
   flex-direction: column;
   align-items: flex-end;
 }
+
+//TicTacToe
+.board {
+  display: flex;
+  justify-content: space-between;  
+  border: 1px solid #7a6a6a;
+  border-radius: 10px;
+}
+.cell {
+  font-weight: 700;
+  padding: 100px;
+  margin: 0px;
+  border: 1px solid #000;
+  border-radius: 10px;
+}
