--- a/src/styles.less
+++ b/src/styles.less
@@ -84,7 +84,9 @@ button, input {
 }
 .cell {
   font-weight: 700;
-  padding: 100px;
+  text-align: center;
+  font-size: 2rem;
+  padding: 50px;
   margin: 0px;
   border: 1px solid #000;
   border-radius: 10px;
